# oo_iga

./: .clang-format  .gitignore  AbstractMapper.hpp  BiharmonicDirichletBoundaryVisitor.hpp  BiharmonicInterface.hpp  BiharmonicMapper.hpp  BiharmonicStiffnessVisitor.hpp  BsplineBasis.cpp  BsplineBasis.h  CMakeLists.txt  DirichletBoundaryVisitor.hpp  DofMapper.cpp  DofMapper.h  DofMapper.hpp  DomainVisitor.hpp  Edge.hpp  GPATH  GRTAGS  GTAGS  InterfaceVisitor.hpp  KnotVector.cpp  KnotVector.h  MmpMatrix.cpp  MmpMatrix.h  MultiArray.h  PhyTensorBsplineBasis.cpp  PhyTensorBsplineBasis.h  PhyTensorNURBSBasis.h  PoissonDirichletBoundaryVisitor.hpp  PoissonInterface.hpp  PoissonMapper.hpp  PoissonStiffnessVisitor.hpp  PoissonVertexVisitor.hpp  PostProcess.cpp  PostProcess.h  PostProcess.hpp  QuadratureRule.cpp  QuadratureRule.h  StiffnessVisitor.hpp  Surface.hpp  (+24 more)
cases/: _main_12_patch_hemishpere.cpp  _main_2_patch_L_beam.cpp  _main_3_patch_circle_shell.cpp  _main_3_patch_kl_plate.cpp  _main_3_patch_pure_shell.cpp  _main_4_patch_hemishpere.cpp  _main_4_patch_plate_with_hole.cpp  _main_4_patch_roof.cpp  _main_inf_sup.cpp  _main_plate_with_hole.cpp  temporary.cpp
depreciated/: MmpMatrix.h  NeumannBoundaryVisitor.hpp
include/: 2DElasticityDeviatoricStiffnessVisitor.hpp  AbstractMapper.hpp  BendingStiffnessVisitor.hpp  BiharmonicDirichletBoundaryVisitor.hpp  BiharmonicInterface.hpp  BiharmonicInterfaceH1.h  BiharmonicInterfaceH1.hpp  BiharmonicInterfaceVisitor.hpp  BiharmonicMapper.hpp  BiharmonicPostProcess.hpp  BiharmonicStiffnessAssembler.hpp  BiharmonicStiffnessVisitor.hpp  BiharmonicVertexVisitor.hpp  BoundaryAssembler.hpp  BsplineBasis.h  CahnHilliardVisitor.hpp  ConstraintAssembler.hpp  DeviatoricStiffnessVisitor.hpp  DirichletBoundaryVisitor.hpp  DofMapper.hpp  DomainInnerProductVisitor.hpp  DomainVisitor.hpp  Edge.hpp  Elasticity2DDeviatoricStiffnessVisitor.hpp  Elasticity2DStiffnessVisitor.hpp  H1DomainSemiNormVisitor.hpp  H2DomainNormVisitor.hpp  InterfaceVisitor.hpp  KnotVector.h  L2StiffnessVisitor.hpp  MembraneStiffnessVisitor.hpp  NeumannBoundaryVisitor.hpp  PhyTensorBsplineBasis.h  PhyTensorNURBSBasis.h  PoissonDirichletBoundaryVisitor.hpp  PoissonInterface.hpp  PoissonInterfaceVisitor.hpp  PoissonMapper.hpp  PoissonStiffnessVisitor.hpp  PostProcess.h  (+15 more)
release/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: BsplineBasis.cpp  KnotVector.cpp  PhyTensorBsplineBasis.hpp  QuadratureRule.cpp  TensorBsplineBasis.cpp  Utility.cpp  main.cpp
